<resources>
    <string name="app_name">smartAttendanceSystem1</string>
    <string name="about_us">About Us</string>
    <string name="users">Users</string>
    <string name="settings">Settings</string>
    <string name="marler">marler</string>
    <string name="inbox">Inbox</string>
    <string name="starred">Starred</string>
    <string name="sent_message">Sent message</string>
    <string name="all_messages">all messages</string>
    <string name="advanced_options">Advanced Options</string>
    <string name="trash">Trash</string>
    <string name="draft">Draft/inbox</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="spam">Spam</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="photo">photo</string>
    <string name="scanFingerprint">Scan Fingerprint</string>
    <string name="edit">Edit Details</string>

</resources>
