<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
      <item
          android:title="@string/inbox"
          android:id="@+id/inbox_id"
          android:icon="@drawable/inbox"/>
        <item
            android:title="@string/starred"
            android:id="@+id/starred_id"
            android:icon="@drawable/star"/>
        <item
            android:title="@string/sent_message"
            android:id="@+id/sent_id"
            android:icon="@drawable/sent"/>
        <item
            android:title="@string/all_messages"
            android:id="@+id/all_id"
            android:icon="@drawable/email"/>

    </group>
    <item android:title="@string/advanced_options">
<menu>
    <item
        android:title="@string/trash"
        android:id="@+id/trash_id"
        android:icon="@drawable/trash"></item>
    <item
        android:title="@string/spam"
        android:id="@+id/spam_id"
        android:icon="@drawable/spam"></item>
    <item
        android:title="@string/draft"
        android:id="@+id/draft_id"
        android:icon="@drawable/draft"></item>
    <item
        android:title="@string/fingerprint"
        android:id="@+id/scan_id"
        android:icon="@drawable/fingerprint"></item>

</menu>
    </item>
</menu>